--- a/files/main_style.css
+++ b/files/main_style.css
@@ -100,7 +100,7 @@ h2 {
 .title {
   width: 949px;
   padding: 13px 0px 0px 0px;
-  margin: 0px 0px 0px 30px;
+  /* margin: 0px 0px 0px 30px; */
   font-size: 30px;
   height: 51px;
   text-align: center;
